# Copyright 2024 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("//build_tools/bazel:enforce_glob.bzl", "enforce_glob")
load("//build_tools/bazel:iree_lit_test.bzl", "iree_lit_test_suite")

package(
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

iree_lit_test_suite(
    name = "lit",
    srcs = enforce_glob(
        [
            "apply_pdl_patterns_torch.mlir",
            "assume_strict_symbols.mlir",
            "attention.mlir",
            "auto_input_conversion.mlir",
            "bind_symbolic_shapes.mlir",
            "bitcast_tensor.mlir",
            "func_conversion.mlir",
            "func_conversion_invalid.mlir",
            "scan.mlir",
            "scatter.mlir",
            "sort.mlir",
            "torch_to_iree.mlir",
            "unstructured_linalg_ext.mlir",
        ],
        include = ["*.mlir"],
        exclude = [
            "torch.pdl.mlir",
        ],
    ),
    cfg = "//compiler:lit.cfg.py",
    data = [
        "torch.pdl.mlir",
    ],
    tools = [
        "//tools:iree-compile",
        "//tools:iree-opt",
        "@llvm-project//llvm:FileCheck",
    ],
)
