# Copyright 2021 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],  # Apache 2.0
)

# Export MLIR test data files for CTS executable tests
exports_files([
    "command_buffer_dispatch_test.mlir",
    "command_buffer_dispatch_constants_test.mlir",
    "executable_cache_test.mlir",
])
