# Copyright 2022 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

# Default implementations for HAL types that use the host resources.
# These are generally just wrappers around host heap memory and host threads.

load("//build_tools/bazel:build_defs.oss.bzl", "iree_runtime_cc_library")
load("//runtime/src/iree/hal/cts:cts_test_suite.bzl", "iree_hal_cts_test_suite")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

iree_runtime_cc_library(
    name = "task_driver",
    srcs = [
        "task_command_buffer.c",
        "task_device.c",
        "task_driver.c",
        "task_event.c",
        "task_queue.c",
        "task_queue_state.c",
        "task_semaphore.c",
    ],
    hdrs = [
        "task_command_buffer.h",
        "task_device.h",
        "task_driver.h",
        "task_event.h",
        "task_queue.h",
        "task_queue_state.h",
        "task_semaphore.h",
    ],
    deps = [
        "//runtime/src/iree/base",
        "//runtime/src/iree/base/internal",
        "//runtime/src/iree/base/internal:arena",
        "//runtime/src/iree/base/internal:cpu",
        "//runtime/src/iree/base/internal:event_pool",
        "//runtime/src/iree/base/internal:synchronization",
        "//runtime/src/iree/base/internal:wait_handle",
        "//runtime/src/iree/hal",
        "//runtime/src/iree/hal/local",
        "//runtime/src/iree/hal/local:executable_environment",
        "//runtime/src/iree/hal/local:executable_library",
        "//runtime/src/iree/hal/utils:deferred_command_buffer",
        "//runtime/src/iree/hal/utils:file_transfer",
        "//runtime/src/iree/hal/utils:files",
        "//runtime/src/iree/hal/utils:resource_set",
        "//runtime/src/iree/hal/utils:semaphore_base",
        "//runtime/src/iree/task",
    ],
)

# IREE local-task HAL Conformance Test Suite
iree_hal_cts_test_suite(
    name = "local_task_cts",
    compiler_target_backend = "llvm-cpu",  # As per prompt/assumption
    driver_name = "local-task",
    driver_registration_fn = "iree_hal_local_task_driver_module_register",
    driver_registration_hdr = "runtime/src/iree/hal/drivers/local_task/registration/driver_module.h",
    executable_format = "vmvx-bytecode-fb",  # As per prompt/assumption
    labels = [
        "cts",
        "driver=local-task",
    ],
    deps = ["//runtime/src/iree/hal/drivers/local_task/registration"],
)
